# CODE-BURGAS-Archive

./: .gitignore  CMakeLists.txt  README.md  commit_changes.py
2019/Group A/A. Number Systems/Condition/: Number Systems.md
2019/Group A/A. Number Systems/Explanation/: Explanation.md
2019/Group A/A. Number Systems/Solution/: Number Systems.cpp
2019/Group A/B. Digital Rivers 2/Condition/: Digital Rivers 2.md
2019/Group A/B. Digital Rivers 2/Explanation/: Explanation.md
2019/Group A/B. Digital Rivers 2/Solution/: Digital Rivers 2.cpp
2019/Group A/C. Sequence/Condition/: Sequence.md
2019/Group A/C. Sequence/Explanation/: Explanation.md
2019/Group A/C. Sequence/Solution/: Sequence.cpp
2019/Group A/D. Shortest Path/Condition/: Shortest Path.md
2019/Group A/D. Shortest Path/Explanation/: Explanation.md
2019/Group A/D. Shortest Path/Solution/: Shortest Path.cpp
2019/Group B/A. Compression/Condition/: Compression.md
2019/Group B/A. Compression/Explanation/: Explanation.md
2019/Group B/A. Compression/Solution/: Compression.cpp
2019/Group B/B. Digital Rivers 1/Condition/: Digital Rivers 1.md
2019/Group B/B. Digital Rivers 1/Explanation/: Explanation.md
2019/Group B/B. Digital Rivers 1/Solution/: Digital Rivers 1.cpp
2019/Group B/C. Transport/Condition/: Transport.md
2019/Group B/C. Transport/Explanation/: Explanation.md
2019/Group B/C. Transport/Solution/: Transport.cpp
2019/Group B/D. Doner/Condition/: Doner.md
2019/Group B/D. Doner/Explanation/: Explanation.md
2019/Group B/D. Doner/Solution/: Doner.cpp
(+259 files in other folders)
